add back link to colours page

--- a/colours.html
+++ b/colours.html
@@ -1,3 +1,5 @@
+<p>this is a link back to the main page <a href="index.html">index.html</a></p>
+
 <p style="background-color: #f00;">
   This is a paragraph with a red background. The hex code is #f00
   Only the red screen leds are turned on.
